update bit and uno templates

--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -165,7 +165,8 @@
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br /></li>
+                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br />
+                </li>
 
                 <li>Newer laptops without microSD slots will need to see the professor or a TA to get a microSD card reader.</li>
 
@@ -200,7 +201,7 @@
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
                     <p>
                         <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                        <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                            <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
                     </p>
 
                 </li>
@@ -225,7 +226,7 @@
                 <li>If you forget your password you can change it in the settings, under Pi&gt;Preferences&gt;Raspberry Pi Configuration.
                     <p>
                         <a href="ChangePassword.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ChangePassword.PNG', 'popup'); return false;">
-                        <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
+                            <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
                     </p>
                 </li>
 
@@ -267,12 +268,13 @@
                     </p>
                     <br />
 
-                    </li>
+                </li>
 
-                <li>
-                    Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
-                    <p><a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                        <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots</p>
+                <li>Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
+                    <p>
+                        <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
+                            <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots
+                    </p>
                 </li>
 
                 <li>Select Pi&gt;Accessories&gt;Text Editor, and create a file that contains only your name in 72 point font.</li>
@@ -322,11 +324,11 @@
         </div>
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeBit01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativePi01</h2>
+                <h2>Screen Shot FormativeBit01</h2>
                 <hr />
             </div>
         </div>
@@ -347,7 +349,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi01.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativeBIT01.">
             <hr />
         </div>
 
