--- a/FormativeUno01/FormativeUno01.html
+++ b/FormativeUno01/FormativeUno01.html
@@ -85,20 +85,18 @@
         <div class="col-lg-12"><a href="#Objectives" class="btn btn-info" data-toggle="collapse">Learning Objectives</a></div>
         <div id="Objectives" class=" collapse in col-lg-12">
             <p>
-                These instructions will show you how to download and create the operating system for a Raspberry Pi single-board computer (SBC); and then start up the device.<br />
-                SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
-                In later assignments you will continue working with and experiencing the capabilities of the Raspberry Pi.
+                These instructions will show you how to create 
+                and upload &#39;sketches&#39; or programs into an Arduino UNO microcontroller.<br />
+                Mincrocontrollers are becoming common-they control automobile engines and subsystems. <a href="https://www.elprocus.com/different-microcontrollers-used-in-automobiles/" class="bg-info text-white" target="_blank">Examples</a>.<br />
+                In later assignments you will continue working with and experiencing the capabilities of the Arduino UNO.
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
-                <li>Obtain latest Raspbian operating system</li>
-                <li>Create a bootable micro-SD card containing the operating system</li>
-                <li>Boot the Raspberry Pi</li>
-                <li>Connect to the WSU Guest wireless network</li>
-                <li>Configure the Raspberry Pi</li>
-                <li>Use a web browser and other software on the Raspberry Pi</li>
-                <li>Install an application on the Raspberry Pi to take screen shots</li>
-                <li>Upload the screen shot to D2L.</li>
+                <li>Obtain, modify or create a sketch</li>
+                <li>Connect the Raspberry Pi to the Arduino UNO</li>
+                <li>Upload the sketch to the UNO</li>
+                <li>Test and debug the sketch</li>
+                <li>Upload a screen shot to D2L.</li>
             </ol>
             <hr />
         </div>
@@ -111,7 +109,7 @@
             This assignment reviews basic computer concepts that you will need in this course and throughout your career.
             <br />
             <p>
-                You are expected to have a working knowledge of SBC hardware and software.<br />
+                You are expected to have a working knowledge of microcontroller hardware and software.<br />
                 If you do not understand how to use an item, perform a Google Search, 
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
@@ -120,7 +118,7 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Obtain Operating System</a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-UNO Sketches</a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
@@ -160,12 +158,13 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Flash microSD card</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Upload a Sketch</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br /></li>
+                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br />
+                </li>
 
                 <li>Newer laptops without microSD slots will need to see the professor or a TA to get a microSD card reader.</li>
 
@@ -188,7 +187,7 @@
 
         <!--Exercise 3-->
 
-        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3-Boot Raspberry Pi</a></div>
+        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3-Test and Debug</a></div>
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
@@ -200,7 +199,7 @@
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
                     <p>
                         <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                        <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                            <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
                     </p>
 
                 </li>
@@ -225,7 +224,7 @@
                 <li>If you forget your password you can change it in the settings, under Pi&gt;Preferences&gt;Raspberry Pi Configuration.
                     <p>
                         <a href="ChangePassword.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ChangePassword.PNG', 'popup'); return false;">
-                        <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
+                            <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
                     </p>
                 </li>
 
@@ -267,12 +266,13 @@
                     </p>
                     <br />
 
-                    </li>
+                </li>
 
-                <li>
-                    Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
-                    <p><a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                        <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots</p>
+                <li>Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
+                    <p>
+                        <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
+                            <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots
+                    </p>
                 </li>
 
                 <li>Select Pi&gt;Accessories&gt;Text Editor, and create a file that contains only your name in 72 point font.</li>
@@ -322,11 +322,11 @@
         </div>
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeUNO01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativePi01</h2>
+                <h2>Screen Shot FormativeUNO01</h2>
                 <hr />
             </div>
         </div>
@@ -347,7 +347,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi01.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativeUNO01.">
             <hr />
         </div>
 
