--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- PgP 7/11/2019 summative assignment for Raspberry Pi, Arduino Uno, micro:bit -->
+    <!-- PgP 7/11/2019 formative assignment for Raspberry Pi, Arduino Uno, micro:bit -->
     <!-- Bootstrap -->
     <link href="../../ReadOnly/bootstrap.css" rel="stylesheet">
 
