added pictures for background info, initial commit of micro:bit

--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -84,6 +84,13 @@
 
         <div class="col-lg-12"><a href="#Objectives" class="btn btn-info" data-toggle="collapse">Learning Objectives</a></div>
         <div id="Objectives" class=" collapse in col-lg-12">
+
+                    <p>
+                        <a href="RaspberryPi3BPlus.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPi3BPlus.png', 'popup'); return false;">
+                        <img src="RaspberryPi3BPlus.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
+                    </p>
+
+
             <p>
                 These instructions will show you how to download and create the operating system for a Raspberry Pi single-board computer (SBC); and then start up the device.<br />
                 SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
@@ -115,6 +122,12 @@
                 If you do not understand how to use an item, perform a Google Search, 
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
+
+                    <p>
+                        <a href="RPi3Pinout.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RPi3Pinout.png', 'popup'); return false;">
+                        <img src="RPi3Pinout.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
+                    </p>
+
             <hr />
         </div>
 
