--- a/FormativeUno01/FormativeUno01.html
+++ b/FormativeUno01/FormativeUno01.html
@@ -84,9 +84,16 @@
 
         <div class="col-lg-12"><a href="#Objectives" class="btn btn-info" data-toggle="collapse">Learning Objectives</a></div>
         <div id="Objectives" class=" collapse in col-lg-12">
+
+                    <p>
+                        <a href="Uno.jpg" class="img-responsive img-rounded" target="popup" onclick="window.open('uno.jpg', 'popup'); return false;">
+                        <img src="Uno.jpg" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
+                    </p>
+
+
             <p>
                 These instructions will show you how to create 
-                and upload &#39;sketches&#39; or programs into an Arduino UNO microcontroller.<br />
+                and upload &#39;sketches&#39; or programs into an <a href="https://en.wikipedia.org/wiki/Arduino_Uno" class="bg-info text-white" target="_blank">Arduino UNO microcontroller</a>.<br />
                 Microcontrollers are becoming common-they control automobile engines and subsystems. <a href="https://www.elprocus.com/different-microcontrollers-used-in-automobiles/" class="bg-info text-white" target="_blank">Examples</a>.<br />
                 And they will provide substantial cost savings in automobiles, like <a href="https://evannex.com/blogs/news/tesla-designs-a-new-wiring-architecture-that-could-greatly-streamline-production" class="bg-info text-white" target="_blank">Teslas</a>.<br />
                 In later assignments you will continue working with and experiencing the capabilities of the Arduino UNO.
@@ -102,6 +109,10 @@
             <hr />
         </div>
 
+                    <p>
+                        <a href="ArduinoPinout.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ArduinoPinout.png', 'popup'); return false;">
+                        <img src="ArduinoPinout.PNG" width="300" alt="Arduion Pinout" class="img-responsive img-responsive" /></a>Arduino Pinout
+                    </p>
 
 
         <div class="col-lg-12"><a href="#Overview" class="btn btn-info" data-toggle="collapse">Assignment Overview</a></div>
@@ -116,6 +127,10 @@
                 If you do not understand how to use an item, perform a Google Search, 
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
+
+
+
+
             <hr />
         </div>
 
