corrected typos, completed Bit01

--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -78,17 +78,17 @@
         </div>
 
         <div class="h3 text-danger col-lg-12">
-            60 Points<hr />
+            100 Points<hr />
         </div>
 
 
         <div class="col-lg-12"><a href="#Objectives" class="btn btn-info" data-toggle="collapse">Learning Objectives</a></div>
         <div id="Objectives" class=" collapse in col-lg-12">
 
-                    <p>
-                        <a href="RaspberryPi3BPlus.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPi3BPlus.png', 'popup'); return false;">
-                        <img src="RaspberryPi3BPlus.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
-                    </p>
+            <p>
+                <a href="RaspberryPi3BPlus.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPi3BPlus.png', 'popup'); return false;">
+                    <img src="RaspberryPi3BPlus.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
+            </p>
 
 
             <p>
@@ -123,10 +123,10 @@
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
 
-                    <p>
-                        <a href="RPi3Pinout.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RPi3Pinout.png', 'popup'); return false;">
-                        <img src="RPi3Pinout.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
-                    </p>
+            <p>
+                <a href="RPi3Pinout.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RPi3Pinout.png', 'popup'); return false;">
+                    <img src="RPi3Pinout.png" width="300" alt="Inland UNO R3" class="img-responsive img-responsive" /></a>Arduino UNO R3
+            </p>
 
             <hr />
         </div>
@@ -178,7 +178,8 @@
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br /></li>
+                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br />
+                </li>
 
                 <li>Newer laptops without microSD slots will need to see the professor or a TA to get a microSD card reader.</li>
 
@@ -213,7 +214,7 @@
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
                     <p>
                         <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                        <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                            <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
                     </p>
 
                 </li>
@@ -238,7 +239,7 @@
                 <li>If you forget your password you can change it in the settings, under Pi&gt;Preferences&gt;Raspberry Pi Configuration.
                     <p>
                         <a href="ChangePassword.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ChangePassword.PNG', 'popup'); return false;">
-                        <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
+                            <img src="ChangePassword.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Changing Password<br />
                     </p>
                 </li>
 
@@ -260,7 +261,7 @@
 
         <!--Exercise 4-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
+        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
@@ -280,12 +281,13 @@
                     </p>
                     <br />
 
-                    </li>
+                </li>
 
-                <li>
-                    Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
-                    <p><a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                        <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots</p>
+                <li>Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
+                    <p>
+                        <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
+                            <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots
+                    </p>
                 </li>
 
                 <li>Select Pi&gt;Accessories&gt;Text Editor, and create a file that contains only your name in 72 point font.</li>
@@ -335,7 +337,7 @@
         </div>
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+                (90) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
