--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="h3 text-danger col-lg-12">
-            60 Points<hr />
+            100 Points<hr />
         </div>
 
 
@@ -165,7 +165,7 @@
                     If a &#39;Select Mode&#39; window appears, choose &#39;BBC micro:bit&#39;, then press OK.<br />
                     <p>
                         <a href="StartMu.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('StartMu.PNG', 'popup'); return false;">
-                        <img src="StartMu.PNG" width="300" alt="Mu Mode" class="img-responsive img-responsive" /></a>Choose Mu Mode
+                            <img src="StartMu.PNG" width="300" alt="Mu Mode" class="img-responsive img-responsive" /></a>Choose Mu Mode
                     </p>
                 </li>
 
@@ -173,9 +173,8 @@
                 <li>This is what the mu editor looks like in micro:bit Mode, with a simple program.<br />
                     <p>
                         <a href="MuSet.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('MuSet.PNG', 'popup'); return false;">
-                        <img src="MuSet.PNG" width="300" alt="Mu Editor" class="img-responsive img-responsive" /></a>Mu Code Editor
+                            <img src="MuSet.PNG" width="300" alt="Mu Editor" class="img-responsive img-responsive" /></a>Mu Code Editor
                     </p>
-
                 </li>
 
             </ol>
@@ -191,52 +190,39 @@
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <p>
-               Create a simple program to scroll a message across the micro:bit.<br />
+                Create a simple program to scroll a message across the micro:bit.<br />
             </p>
 
             <ol>
 
-                                <li>On the Pi, open the Chromium browser to:<br />
-
+                <li>On the Pi, open the Chromium browser to the following url:<br />
                     <a href="https://microbit-micropython.readthedocs.io/en/latest/tutorials/hello.html" class="bg-info text-white" target="_blank">Scroll Message: https://microbit-micropython.readthedocs.io/en/latest/tutorials/hello.html</a>
-
-
-
                     <br />
-                    Write a program that scrolls the following message across the micro:bit after pressing the A button.<br />
-                    <code>Welcome to MIS!</code>
+                    This page explains how to create a program that scrolls a message across the micro:bit.<br />
                 </li>
 
-                <li>Make use of the toolbar buttons, such as &#39;Check&#39;, to verify your code before you flash (upload) the code to the micro:bit.
+                <li>After reading the page, you can easily modify the code in order to make it display other text.<br />
                 </li>
 
-                <li>From the menu choose File&gt;Examples&gt;01.Basics&gt;Blink<br />
-                    The code that appears is well commented.<br />
-                    Read the comments and the code.<br />
-                    The program creates a variable to manipulate an LED, then enters an infinite loop that turns the LED on for 1 second, and off for 1 second, ad infinitum.
+                <li>Below is code that will display another message.<br />
+                    Copy it, and paste it into the Mu editor.<br />
+                    Then make use of the toolbar buttons, such as &#39;Check&#39;, to verify your code before you flash (upload) the code to the micro:bit.<br />
+                    <pre>
+ # <-- this is a comment
+
+# Write your code below :-)
+
+from microbit import *   # import entire micro:bit library
+
+display.scroll("WELCOME TO MIS!")
+</pre>
                 </li>
 
-                <li>To verify the code syntax is correct, from the menu choose Sketch&gt;Verify / Compile.<br />
-                    In the status window at the bottom you should see a &#39;Done compiling&#39; message.<br />
-                    If not, time to trouble-shoot.
-                    <p>
-                        <a href="../FormativeUno01/VerifySketch.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VerifySketch.PNG', 'popup'); return false;">
-                            <img src="../FormativeUno01/VerifySketch.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Sketch Compiled Properly
-                    </p>
+                <li>Save the program as <strong>FormativeBit01.py</strong> in the default location,                   
+                    &#39;/home/pi/mu_code&#39;
                 </li>
 
-                <li>From the Arduino IDE choose File&gt;Upload
-                    <br />
-                    After a few seconds the status bar will display the message 
-                    &#39;Done uploading.&#39;<br />
-                    The amber light will be blinking-on 1 second, off 1 second, until power is removed, or another sketch is uploaded.<br />
-                    <p>
-                        <a href="../FormativeUno01/BlinkyLight.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('BlinkyLight.PNG', 'popup'); return false;">
-                            <img src="../FormativeUno01/BlinkyLight.PNG" width="300" alt="Blinking Light" class="img-responsive img-responsive" /></a> Blinking Light
-                    </p>
-                    <br />
-                    Note: the green light at the right side of the UNO indicates power is applied to the board.
-
+                <li>You can press the &#39;Reset&#39; button to make a program run again.
                 </li>
 
             </ol>
@@ -249,61 +235,88 @@
 
         <div id="Exercise03" class="collapse in  col-lg-12">
             <p>
-                You will next modify the sketch and save it with a new name.<br />
-                Then you will upload the sketch and make sure it works.
+                Next you are given a program that does not work, which means something is wrong with the code.<br />
+                Note that there can be multiple problems!<br />
+                Use your trouble-shooting skills to diagnose and repair the code.<br />
+                Hint: remember to 
+                &#39;Check&#39; your code.
             </p>
 
+            <p>
+                Another hint: make use of the function syntax.<br />
+                <p>
+                    <a href="SyntaxChecker.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('SyntaxChecker.PNG', 'popup'); return false;">
+                        <img src="SyntaxChecker.PNG" width="300" alt="Syntax Checker" class="img-responsive img-responsive" /></a>Syntax Checker
+                </p>
+            </p>
+
+            <p>
+                And another hint: if you try to flash a program that does not work, an error message will scroll on the micro:bit.<br />
+                This message may be lengthy, so hard to read.
+            </p>
+
+            <hr />
+
             <ol>
-                <li>In the Arduino IDE, Blink sketch, choose File&gt;Save As... name it Blink01, saving it in the \pi\sketchbook\ folder as suggested.
+                <li>Copy the code below, and paste it into the mu editor:<br />
+
+                    <pre>from microbit import *
+
+while True:
+    if button_a.is_prssed():
+        display.show(Image.HAPPY)
+    elif button_b.is_pressed():
+        display.scroll("I love coding!",delay=100,wait=True,loop=False, monospace=False)
+    else:
+        display.show(Image.SAD)
+
+display.clear()
+</pre>
                     <br />
                 </li>
 
-                <li>Note that the sketch name, Blink01, appears in the Arduino IDE title bar.<br />
+                <li>Save the program as <strong>FormativeBit01X.py</strong> in the default folder.
                 </li>
 
-                <li>Modify the sketch.<br />
-                    Copy the four lines of code that turn the LED on and off.<br />
-                    Paste those four lines below where they currently end, being careful not to delete the brace &#39;}&#39; character.<br />
-                    Modify the On/Off timings, noting that 1000 represents 1000 milliseconds or 1 second.<br />
-                    Update the comments to reflect the timings that you chose.<br />
-                    Review and then &#39;Verify&#39; your code by pressing the check in the left end of the toolbar.<br />
-                    Your sketch will look something like this:<br />
+                <li>Use your trouble-shooting skills to make the program function properly:<br />
+                    When button A is pressed, a Happy Face appears on the micro:bit<br />
+                    When button B is pressed, the message 
+                    &#39;I love coding!&#39; scrolls on the micro:bit<br />
+                    When no button is pressed, a Sad Face appears on the micro:bit
+                </li>
 
-                    <p>
-                        <a href="../FormativeUno01/Blink01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Blink01.PNG', 'popup'); return false;">
-                            <img src="../FormativeUno01/Blink01.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
-                    </p>
+                <li>Modify the program as required so that is works.<br />
 
                 </li>
 
-                <li>When you are satisfied that your sketch is ready to go, choose File&gt;Upload to compile and upload the new sketch to the UNO.<br />
-                    Note that if you get an error message, you may need to choose Tools
-                    &gt;Serial Port&gt;/dev/tty/ACM0</li>
+                <li>When you think the program is ready, flash the micro:bit and try it out.<br />
+                </li>
             </ol>
             <hr />
         </div>
 
 
 
+
         <!--Exercise 4-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
+        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
             <ol>
-                <li>On the Raspberry Pi make sure the Arduion IDE and your name on the desktop are visible.</li>
+                <li>On the Raspberry Pi make sure the mu editor showing FormativeBit01X and your name on the desktop are visible.</li>
 
                 <li>In the terminal window type in 
                     <code>scrot -s</code>
-                    then click and drag the mouse to select an area around your name in the text file, and the Arduino IDE.
+                    then click and drag the mouse to select an area around your name and the mu editor.
                 </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot FormativeUNO01.png</li>
+                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot FormativeBit01.png</li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
-                        <a href="../FormativeUno01/FormativeUNO01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FormativeUNO01.PNG', 'popup'); return false;">
-                            <img src="../FormativeUno01/FormativeUNO01.PNG" width="300" alt="Blink01" class="img-responsive img-responsive" /></a>Modified Blink01<br />
+                        <a href="PythonCode.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('PythonCode.PNG', 'popup'); return false;">
+                            <img src="PythonCode.PNG" width="300" alt="Python Code" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
                     </p>
                 </li>
             </ol>
@@ -327,7 +340,7 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeBIT01&#39; D2L Assignment Folder.
+                (90) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeBIT01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
