clarified instructions, added image

--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -117,14 +117,21 @@
             This assignment reviews basic computer concepts that you will need in this course and throughout your career.<br />
             For this assignment, you will install the Mu&nbsp; code editor onto your Raspberry Pi.<br />
             Note there is also a Mu editor available for Windows.<br />
-            Then you will learn to work with  Mu and upload programs to the micro:bit.<br />
-            Later assignments will show you how to modify, create and debug these programs.
+            You will learn to work with  Mu and upload programs to the micro:bit.<br />
+            And you will modify and debug these programs.
             <p>
                 You are expected to have a working knowledge of microcontroller hardware and software.<br />
                 If you do not understand how to use an item, perform a Google Search, 
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
             <hr />
+            <p>
+                Note: if the micro:bit is acting up, it may need to have the firmware updated.<br />
+                Instructions to update the micro:bit firmware can be found here: <a href="https://microbit.org/guide/firmware/" class="bg-info text-white" target="_blank">Update Firmware</a><br />
+                Current firmware Interface Version: 0253<br />
+            </p>
+            <hr />
+
         </div>
 
         <!--Exercise 1-->
@@ -142,7 +149,7 @@
 
                 <li>Make sure to connect the micro:bit to the Raspberry Pi using a USB A to micro USB cable.</li>
                 <li>Boot the Raspberry Pi, and ensure it has internet access.</li>
-                <li>You may notice that after the Raspberry Pi boots, that a message appears on the micro:bit screen.<br />
+                <li>You may notice that after the Raspberry Pi boots, a message appears on the micro:bit screen.<br />
                     This is not a problem, the micro:bit is running a default program that was uploaded previously.
                 </li>
                 <li>On the Pi, open a Terminal window.<br />
@@ -178,6 +185,14 @@
                 </li>
 
             </ol>
+
+            <hr />
+
+            <p>
+                Before proceeding, make sure that you have already uploaded / published this assignment to your course website.<br />
+                Then you will be able to view the remaining instructions and copy code from the assignment while viewing it in the Raspberry Pi, using the Chromium browser.
+            </p>
+
             <hr />
         </div>
 
