--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -17,12 +17,6 @@
     <!-- course constant file that contains semester, class, section pages -->
     <script src="../../ReadOnly/CourseConstants.js"></script>
 
-    <style type="text/css">
-        .auto-style1 {
-            text-decoration: underline;
-        }
-    </style>
-
 </head>
 
 <body onload="setVariables()">
@@ -241,8 +235,10 @@
                 <li>CONNECT TO WSU GUEST ONLY!!!<br />
                     If prompted make an account and log in.</li>
 
-                <li>When asked to update, click next. <br />
-                    The update will begin, this make take a few minutes. <br />
+                <li>When asked to update, click next.
+                    <br />
+                    The update will begin, this make take a few minutes.
+                    <br />
                     If asked to restart, do so.</li>
 
                 <li>Open Notepad, choose a password (Please use <code>MagicMirror%</code>).<br />
@@ -269,7 +265,8 @@
                 <li>In the upper left corner, you will see the raspberry icon.<br />
                     Raspberry Icon, aka 
                     &#39;Menu&#39;<br />
-                    Click the Raspberry icon, <img src="Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" />
+                    Click the Raspberry icon,
+                    <img src="Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" />
                     then preferences, and Raspberry Pi Configuration.<br />
                 </li>
                 <li>Click the interfaces tab, Enable SSH and VNC.</li>
@@ -286,7 +283,7 @@
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
-            <p>Install scrot (short for <span class="auto-style1">SCR</span>een sh<span class="auto-style1">OT</span>) to take screen shots that document your work.</p>
+            <p>Install scrot (short for <strong>SCR</strong>een sh<strong>OT</strong>) to take screen shots that document your work.</p>
 
             <ol>
                 <li>On the Raspberry Pi open a terminal window.</li>
@@ -351,9 +348,9 @@
             </ul>
             <br />
             <p>
-                Your screen shot name will be of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
+                The screen shot name will be of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
                 <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a><br />
+                    <img src="ConfigurationScreenShot.PNG" width="300" alt="configuration" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
                 <br />
             </p>
             Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.<br />
@@ -369,8 +366,6 @@
                 <hr />
             </div>
         </div>
-
-
 
 
         <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Submit Assignment</a></div>
